<resources>
    <string name="app_name">Event Registration</string>
    <string name="action_settings">Settings</string>
    <string name="newparticipant_hint">Who?</string>
    <string name="newparticipant_button">Add Participant</string>
    <string name="register_button">Register</string>
    <string name="newevent_date_label">Date?</string>
    <string name="newevent_start_time">Start time?</string>
    <string name="newevent_date_first">01-01-2016</string>
    <string name="newevent_hint">Event name?</string>
    <string name="newevent_start_time_label">Start time?</string>
    <string name="newevent_start_time_default">12:00</string>
    <string name="newevent_end_time_default">13:00</string>
    <string name="newevent_end_time_label">End time?</string>
    <string name="newevent_button">Add Event</string>
    <string name="participantspinner_label">Participant?</string>
    <string name="eventspinner_label">Event?</string>

</resources>
