<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.eventregistration.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/participantspinner_label"/>

            <Spinner
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/participantspinner"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/eventspinner_label"/>

            <Spinner
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/eventspinner"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:layout_gravity="end"
            android:onClick="addParticipant"/>



        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"/>

        <EditText
            android:id="@+id/newparticipant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newparticipant_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newparticipant_button"
            android:layout_gravity="end"
            android:onClick="addParticipant"/>

        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"/>




        <EditText
            android:id="@+id/newevent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newevent_hint" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/newevent_date_label"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newevent_date_first"
                android:layout_gravity="end"
                android:id="@+id/newevent_date"
                android:onClick="showDatePickerDialog"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/newevent_start_time_label"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newevent_start_time_default"
                android:layout_gravity="end"
                android:id="@+id/newevent_start_time"
                android:onClick="showDatePickerDialog"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/newevent_end_time_label"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newevent_end_time_default"
                android:layout_gravity="end"
                android:id="@+id/newevent_end_time"
                android:onClick="showDatePickerDialog"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newevent_button"
            android:layout_gravity="end"
            android:onClick="addEvent"/>

    </LinearLayout>

</RelativeLayout>
